@@ -37,8 +37,8 @@ import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.TearDown;
 import org.openjdk.jmh.annotations.Warmup;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.nio.ByteBuffer;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Supplier;
@@ -52,18 +52,17 @@ import java.util.function.Supplier;
 public class BulkMismatchAcquire {
 
     public enum SessionKind {
-        CONFINED(MemorySession::openConfined),
-        SHARED(MemorySession::openShared),
-        IMPLICIT(MemorySession::openImplicit);
+        CONFINED(Arena::openConfined),
+        SHARED(Arena::openShared);
 
-        final Supplier<MemorySession> sessionFactory;
+        final Supplier<Arena> arenaFactory;
 
-        SessionKind(Supplier<MemorySession> sessionFactory) {
-            this.sessionFactory = sessionFactory;
+        SessionKind(Supplier<Arena> arenaFactory) {
+            this.arenaFactory = arenaFactory;
         }
 
-        MemorySession makeSession() {
-            return sessionFactory.get();
+        Arena makeArena() {
+            return arenaFactory.get();
         }
     }
 
@@ -73,7 +72,7 @@ public class BulkMismatchAcquire {
     // large(ish) segments/buffers with same content, 0, for mismatch, non-multiple-of-8 sized
     static final int SIZE_WITH_TAIL = (1024 * 1024) + 7;
 
-    MemorySession session;
+    Arena arena;
     MemorySegment mismatchSegmentLarge1;
     MemorySegment mismatchSegmentLarge2;
     ByteBuffer mismatchBufferLarge1;
@@ -85,15 +84,15 @@ public class BulkMismatchAcquire {
 
     @Setup
     public void setup() {
-        session = sessionKind.makeSession();
-        mismatchSegmentLarge1 = MemorySegment.allocateNative(SIZE_WITH_TAIL, session);
-        mismatchSegmentLarge2 = MemorySegment.allocateNative(SIZE_WITH_TAIL, session);
+        arena = sessionKind.makeArena();
+        mismatchSegmentLarge1 = arena.allocate(SIZE_WITH_TAIL);
+        mismatchSegmentLarge2 = arena.allocate(SIZE_WITH_TAIL);
         mismatchBufferLarge1 = ByteBuffer.allocateDirect(SIZE_WITH_TAIL);
         mismatchBufferLarge2 = ByteBuffer.allocateDirect(SIZE_WITH_TAIL);
 
         // mismatch at first byte
-        mismatchSegmentSmall1 = MemorySegment.allocateNative(7, session);
-        mismatchSegmentSmall2 = MemorySegment.allocateNative(7, session);
+        mismatchSegmentSmall1 = arena.allocate(7);
+        mismatchSegmentSmall2 = arena.allocate(7);
         mismatchBufferSmall1 = ByteBuffer.allocateDirect(7);
         mismatchBufferSmall2 = ByteBuffer.allocateDirect(7);
         {
@@ -117,9 +116,7 @@ public class BulkMismatchAcquire {
 
     @TearDown
     public void tearDown() {
-        if (session.isCloseable()) {
-            session.close();
-        }
+        arena.close();
     }
 
     @Benchmark
@@ -132,7 +129,7 @@ public class BulkMismatchAcquire {
     @OutputTimeUnit(TimeUnit.NANOSECONDS)
     public long mismatch_large_segment_acquire() {
         long[] arr = new long[1];
-        mismatchSegmentLarge1.session().whileAlive(() -> {
+        mismatchSegmentLarge1.scope().whileAlive(() -> {
             arr[0] = mismatchSegmentLarge1.mismatch(mismatchSegmentSmall2);
         });
         return arr[0];
@@ -154,7 +151,7 @@ public class BulkMismatchAcquire {
     @OutputTimeUnit(TimeUnit.NANOSECONDS)
     public long mismatch_small_segment_acquire() {
         long[] arr = new long[1];
-        mismatchSegmentLarge1.session().whileAlive(() -> {
+        mismatchSegmentLarge1.scope().whileAlive(() -> {
             arr[0] = mismatchSegmentSmall1.mismatch(mismatchSegmentSmall2);
         });
         return arr[0];
